# SimuForge

./: .gitignore  Cargo.toml  QUICKSTART.md  README.md  claude_plan.md  package-lock.json  package.json  temp.txt
crates/simuforge-core/: Cargo.toml
crates/simuforge-core/src/: error.rs  lib.rs  math.rs  metrics.rs  report.rs  spec.rs
crates/simuforge-harness/: Cargo.toml
crates/simuforge-harness/src/: main.rs  runner.rs
crates/simuforge-harness/src/commands/: baseline.rs  mod.rs  run.rs  suite.rs
crates/simuforge-physics/: Cargo.toml
crates/simuforge-physics/src/: body_builder.rs  lib.rs  world.rs
crates/simuforge-physics/src/metrics/: mod.rs
crates/simuforge-physics/src/scenarios/: bouncing.rs  box_stack.rs  friction_ramp.rs  mod.rs  rolling.rs
crates/simuforge-wasm/: Cargo.toml
crates/simuforge-wasm/src/: lib.rs
experiments/baselines/: .gitkeep  box-stack-10.json
experiments/benchmarks/: bouncing-ball.yaml  box-stack-10.yaml  box-stack-50.yaml  friction-ramp.yaml  rolling-sphere.yaml
experiments/schemas/: experiment.schema.json
scripts/: build-wasm.sh  run-benchmarks.sh
