[workspace]
resolver = "2"
members = [
    "crates/simuforge-core",
    "crates/simuforge-physics",
    "crates/simuforge-harness",
    "crates/simuforge-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/your-org/simuforge"

[workspace.dependencies]
# Internal crates
simuforge-core = { path = "crates/simuforge-core" }
simuforge-physics = { path = "crates/simuforge-physics" }

# Physics
rapier3d = { version = "0.22", features = ["enhanced-determinism", "serde-serialize"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CLI
clap = { version = "4.5", features = ["derive"] }

# WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.2", features = ["js"] }

# Utilities
thiserror = "1.0"
anyhow = "1.0"
nalgebra = "0.33"
rand = "0.8"
rand_chacha = "0.3"

[profile.release]
lto = true
opt-level = 3

[profile.release-wasm]
inherits = "release"
opt-level = "s"
