[package]
name = "simuforge-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and traits for SimuForge physics simulation harness"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
nalgebra = { workspace = true, features = ["serde-serialize"] }
thiserror = { workspace = true }

[features]
default = []
