[package]
name = "simuforge-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly bindings for SimuForge physics simulation"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
simuforge-core = { workspace = true }
simuforge-physics = { workspace = true }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde-wasm-bindgen = "0.6"
getrandom = { workspace = true }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "s"
lto = true
